// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZStepper renders a default stepper component 1`] = `
<div class="z-stepper flex">
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        step1
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400"></div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        step2
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400"></div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        step3
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400"></div>
    </div>
  </div>
</div>
`;

exports[`ZStepper renders a stepper component with status from the Step 1`] = `
<div class="z-stepper flex">
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-juniper"><span class="flex items-center justify-center h-full text-base font-bold text-ink-400">✓</span></div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 1
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200">Some description</div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-robin">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 2
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200">Some description</div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 3
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
</div>
`;

exports[`ZStepper renders a stepper component with status passed from the Parent Component 1`] = `
<div class="z-stepper flex">
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 1
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 2
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 3
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
</div>
`;

exports[`ZStepper renders a vertical stepper component 1`] = `
<div class="z-stepper flex flex-col">
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 1
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 2
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
  <div class="mr-0 z-step w-1/3 flex-shrink-0 flex-grow-0">
    <div class="relative z-step__head currentStatus w-full">
      <!---->
      <div class="w-6 h-6 rounded-full z-step__icon bg-ink-200">
        <!---->
      </div>
      <!---->
    </div>
    <div class="z-step__main mt-4">
      <div class="mt-1 text-xs font-medium leading-snug tracking-widest uppercase z-step__title text-vanilla-400">
        Step 3
      </div>
      <div class="mt-1 text-sm font-bold leading-6 z-step__description text-vanilla-200 text-vanilla-400">Some description</div>
    </div>
  </div>
</div>
`;
